--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "numeral": "^2.0.6",
     "slugify": "^1.6.5",
     "socket.io": "^4.4.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "validator": "^13.7.0",
     "xss-clean": "^0.1.1"
   },
