--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\"",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js development"
   },
   "author": "Thinh Le",
   "license": "ISC",
@@ -40,6 +40,7 @@
     "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^2.0.12",
     "numeral": "^2.0.6",
+    "sharp": "^0.32.6",
     "slugify": "^1.6.5",
     "socket.io": "^4.4.1",
     "swagger-jsdoc": "^6.2.8",
