--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\"",
+    "test": "npm run format:check",
     "start": "node server.js",
-    "dev": "nodemon server.js development"
+    "dev": "nodemon server.js development",
+    "format:check": "prettier --check .",
+    "format:write": "prettier --write ."
   },
   "author": "Thinh Le",
   "license": "ISC",
@@ -52,5 +54,9 @@
   "engines": {
     "node": "^14.17.3",
     "npm": "8.1.0"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.23.3",
+    "prettier": "^3.1.0"
   }
 }
