--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^6.1.0",
+    "format-number": "^3.0.0",
     "fuse.js": "^7.0.0",
+    "handlebars": "^4.7.8",
     "helmet": "^5.0.1",
     "ip": "^1.1.5",
     "jsonwebtoken": "^8.5.1",
