add redis service; add redis locking in order service

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "nodemon": "^2.0.12",
     "numeral": "^2.0.6",
     "qs": "^6.11.2",
+    "redis": "^4.6.12",
     "sharp": "^0.32.6",
     "slugify": "^1.6.5",
     "socket.io": "^4.4.1",
