--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Thinh Le",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.10.3",
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
